[gd_scene load_steps=7 format=2]

[ext_resource path="res://Asset/Pict/background_menu.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Node/ButtonMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Asset/Font/waltograph42.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Asset/Pict/GODOT.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 2
outline_color = Color( 0.0313726, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = -512.0
margin_bottom = -600.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 513.239, 301.751 )
scale = Vector2( 0.754763, 0.66356 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 984.914, 559.628 )
scale = Vector2( 0.125166, 0.126401 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 292.324
margin_top = 101.568
margin_right = 438.324
margin_bottom = 144.568
custom_fonts/font = SubResource( 1 )
text = "Human Virus"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="menuDLC" parent="." instance=ExtResource( 2 )]
margin_left = 32.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 65.0
focus_neighbour_top = NodePath("../menuExit")
focus_neighbour_bottom = NodePath("../menuNewGame")
text = "DLC"

[node name="menuNewGame" parent="." instance=ExtResource( 2 )]
margin_left = 32.0
margin_top = 80.0
margin_right = 224.0
margin_bottom = 129.0
focus_neighbour_top = NodePath("../menuExit")
focus_neighbour_bottom = NodePath("../menuLeaderboard")
text = "New Game"
reference_path = "res://Scenes/NewGameScene.tscn"
start_focused = true

[node name="menuLeaderboard" parent="." instance=ExtResource( 2 )]
margin_left = 32.0
margin_top = 144.0
margin_right = 224.0
margin_bottom = 193.0
focus_neighbour_top = NodePath("../menuNewGame")
focus_neighbour_bottom = NodePath("../menuOptions")
text = "Leaderboard"

[node name="menuOptions" parent="." instance=ExtResource( 2 )]
margin_left = 32.0
margin_top = 208.0
margin_right = 224.0
margin_bottom = 257.0
focus_neighbour_top = NodePath("../menuLeaderboard")
focus_neighbour_bottom = NodePath("../menuExit")
text = "Options"

[node name="menuExit" parent="." instance=ExtResource( 2 )]
margin_left = 32.0
margin_top = 272.0
margin_right = 224.0
margin_bottom = 321.0
focus_neighbour_top = NodePath("../menuOptions")
focus_neighbour_bottom = NodePath("../menuNewGame")
text = "Exit"
[connection signal="pressed" from="menuDLC" to="." method="_on_menuDLC_pressed"]
[connection signal="pressed" from="menuNewGame" to="." method="_on_menuNewGame_pressed"]
[connection signal="pressed" from="menuExit" to="." method="_on_menuExit_pressed"]
